# CRC8_Signature

./: CMakeLists.txt  README.md
integrationtest/: CMakeLists.txt  integrationtest.cpp  profiler.h
src/: CMakeLists.txt  concurentmemorypool.cpp  concurentmemorypool.h  concurentqueue.h  crchasher.cpp  crchasher.h  crcsignatureoffile.cpp  crcsignatureoffile.h  datafile.cpp  datafile.h  datafilewrapper.cpp  datafilewrapper.h  dataframe.cpp  dataframe.h  defs.h  main.cpp  memorysizeliterals.h  programmoptions.cpp  programmoptions.h  utils.h  zerofilledmemory.cpp  zerofilledmemory.h
unittests/: CMakeLists.txt  crchashertestsuite.cpp  crcsignatureoffiletestsuite.cpp  datafiletestsuite.cpp  datafilewrappertestsuite.cpp  dataframetestsuite.cpp  integrationtest.cpp  main.cpp  programmoptionstestsuite.cpp  testdefs.h  testtools.cpp  testtools.h
unittestsdata/: smallRandFile
